--- a/app/src/main/res/layout/activity_login_v2.xml
+++ b/app/src/main/res/layout/activity_login_v2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_dark">
+    android:background="@drawable/back01">
 
     <TextView
         android:id="@+id/textView"
@@ -83,6 +83,7 @@
 
         <android.support.v7.widget.AppCompatCheckBox
             android:id="@+id/accept_check"
+            app:buttonTint="@color/white"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
