--- a/app/src/main/res/layout/activity_confirmation_v2.xml
+++ b/app/src/main/res/layout/activity_confirmation_v2.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/back01"
-    android:paddingTop="48dp"
-    tools:context="com.getbewarned.connectinterpreter.ui.ConfirmationActivity">
+    android:fitsSystemWindows="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingTop="44dp"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin">
 
@@ -92,4 +91,4 @@
                 android:textStyle="bold" />
         </FrameLayout>
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
